hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello1-clusterip
spec:
  type: LoadBalancer
  selector:
    app: hello1
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello1
spec:
  selector:
    matchLabels:
      app: hello1
  replicas: 2
  template:
    metadata:
      labels:
        app: hello1
    spec:
      containers:
      - name: hello1
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
          protocol: TCP
