nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1-clusterip
spec:
  type: LoadBalancer
  selector:
    app: web1
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
spec:
  selector:
    matchLabels:
      app: web1
  replicas: 2
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: nginx
        ports:
        - containerPort: 80
          protocol: TCP
